k8s/namespaces/base/observability/kube-prometheus-stack/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alert-manager
  namespace: observability
spec:
  hosts:
    - 'alert-manager.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 9093
            host: x-alertmanager.observability.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLUSTER_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'grafana.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: grafana.observability.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: observability
spec:
  hosts:
    - 'prometheus.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 9090
            host: x-prometheus.observability.svc.cluster.local
